...
    
    var titleLabel = UILabel()
    
    var textFieldViewStackView = UIStackView()
    var noDigitsFieldTextFieldView = createCustomTextFieldView(text: "NO digits field", placeholder: "Type here")
    var inputLimitTextFieldView = createCustomTextFieldView(text: "Input limit", placeholder: "Type here")
    var onlyCharactersTextFieldView = createCustomTextFieldView(text: "Only characters", placeholder: "wwwww-ddddd")
    var linkTextFieldView = createCustomTextFieldView(text: "Link", placeholder: "www.example.com")
    var validationRulesTextFieldView = createCustomTextFieldView(text: "Validation rules", placeholder: "Password")
    
    var characterCounterLabel = UILabel()
    
    var validationProgressView = UIProgressView()
    
    var labelStackView = UIStackView()
    var lengthValidationLabel = createCustomLabel(text: "Min length 8 characters.")
    var digitValidationLabel = createCustomLabel(text: "Min 1 digit,")
...
        noDigitsFieldTextFieldView.inputTextField.addTarget(self, action: #selector(textFieldDidChange(textField:)), for: UIControl.Event.editingChanged)
        inputLimitTextFieldView.inputTextField.addTarget(self, action: #selector(textFieldDidChange(textField:)), for: UIControl.Event.editingChanged)
        onlyCharactersTextFieldView.inputTextField.addTarget(self, action: #selector(textFieldDidChange(textField:)), for: UIControl.Event.editingChanged)
        linkTextFieldView.inputTextField.addTarget(self, action: #selector(textFieldDidChange(textField:)), for: UIControl.Event.editingChanged)
        validationRulesTextFieldView.inputTextField.addTarget(self, action: #selector(textFieldDidChange(textField:)), for: UIControl.Event.editingChanged)
        
        noDigitsFieldTextFieldView.inputTextField.accessibilityIdentifier = "noDigitsTextField"
        inputLimitTextFieldView.inputTextField.accessibilityIdentifier = "inputLimitTextField"
        onlyCharactersTextFieldView.inputTextField.accessibilityIdentifier = "onlyCharactersTextField"
        linkTextFieldView.inputTextField.accessibilityIdentifier = "linkTextField"
        validationRulesTextFieldView.inputTextField.accessibilityIdentifier = "validationRulesTextField"
        
        NotificationCenter.default.addObserver(self, selector: #selector(keyboardWillShow(notification:)), name: UIResponder.keyboardWillShowNotification, object: nil)
        NotificationCenter.default.addObserver(self, selector: #selector(keyboardWillHide(notification:)), name: UIResponder.keyboardWillHideNotification, object: nil)
    }
    
    //MARK: - UIElements Property and Layout Configuration Methods
...
